快速回复楼主功能改造、跳转楼层位置变更

--- a/css/common/c-footer/all.less
+++ b/css/common/c-footer/all.less
@@ -7,8 +7,8 @@
 	font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
 	line-height:2.2;
 	padding:20px 0;
-	border-top:1px solid #eee;
-	background-color:#fefefe;
+	border-top:1px solid #ddd;
+	background-color:#f9f9f9;
 	.color(#222,@blue-link,@blue-link);
 	a:hover{text-decoration:underline;}
 }
