--- a/css/common/c-header/nav.less
+++ b/css/common/c-header/nav.less
@@ -2,7 +2,7 @@
 @c-header-nav-liheight:46px;
 
 .c-header-nav{
-	background-color:#fafafa;
+	background-color:#f9f9f9;
 	.size(100%,@c-header-nav-height);
 	border-bottom:1px solid #ddd;
 	overflow:hidden; 	//for ipad
