--- a/css/forum/c-fli-cmt.less
+++ b/css/forum/c-fli-cmt.less
@@ -1,6 +1,6 @@
 //点评
-@c-fli-cmt-border:#eee;
-@c-fli-cmt-bg:#fcfcfc;
+@c-fli-cmt-border:#ddd;
+@c-fli-cmt-bg:#f9f9f9;
 
 .c-fli-cmt{
 	margin-top:40px;
