--- a/css/forum/c-fli-content.less
+++ b/css/forum/c-fli-content.less
@@ -1,9 +1,4 @@
-//内容包裹区
-.c-fli .c-fli-content{
-	//margin-left:20px + 10px;
-}
-
-//内容区
+//内容区最小高度
 .t_fsz{
 	min-height:auto;
 }
@@ -11,4 +6,11 @@
 	min-height:80px;
 }
 
+//对齐
+.c-fli .c-fli-content{
+	margin-left: 30px;
+}
 
+.ua-responsive .screen-s .c-fli-content{
+	margin-left: 30px;
+}
