--- a/css/forum/c-fli-info.less
+++ b/css/forum/c-fli-info.less
@@ -1,5 +1,10 @@
-.c-forum-replycredit{
-	
+.c-fli-replycredit{
+	.clearfix;
+
+	line-height:26px;
+	color:#999;
+	strong{color:@yel;}
+
 	&#pl_top{border-top:none;}
 
 	.u-icons-replycredit{
@@ -7,12 +12,10 @@
 		background:url('@{url}forum/replycredit.png') no-repeat 0 0;
 		//.y;margin-top: -1px;
 	}
-
-	line-height:26px;
-
-	color:#999;
-
-	strong{color:@yel;}
-
 }
+.ua-responsive .screen-s .c-fli-replycredit{
+	font-size:12px;
+}
+
+
 
