--- a/css/widget/widget.less
+++ b/css/widget/widget.less
@@ -9,3 +9,4 @@
 @import url('w-tgpost.less');		//折叠楼层
 @import url('w-fastpost.less');		//快速回复
 @import url('w-dialog.less');		//dz默认弹层
+@import url('w-gotofloor.less');		//跳转楼层
