--- a/template/default/component/c_fli_info.htm
+++ b/template/default/component/c_fli_info.htm
@@ -1,9 +1,7 @@
-<div class="c-forum-mark">
+<div class="c-fli-info">
 
-	<!-- 回帖奖励 -->
 	<!--{if $_G['forum_thread']['replycredit'] > 0 || $rushreply}-->
-	<div class="c-forum-replycredit" id="pl_top">
-
+	<div class="c-fli-replycredit" id="pl_top">
 		<!-- 回帖奖励 -->
 		<!--{if $_G['forum_thread']['replycredit'] > 0 }-->
 			<i class="u-icons-replycredit"></i>
@@ -46,7 +44,6 @@
 					<a href="forum.php?mod=viewthread&tid=$_G[tid]" class="xi2">{lang thread_rushreply_check_back}</a>
 				</p>
 			<!--{/if}-->
-
 		<!--{/if}-->
 	</div>
 	<!--{/if}-->
