--- a/template/default/forum/viewthread_bottom.htm
+++ b/template/default/forum/viewthread_bottom.htm
@@ -12,6 +12,9 @@ $_G['forum_tagscript']
 
 <!--{hook/viewthread_middle}-->
 
+<!-- jx3pve:fastreply -->
+<!--{template component/c_fli_fastreply}-->
+
 <!-- jx3pve:fastpost -->
 <div class="w-fastpost w-fastpost-view">
 	<!-- jx3pve:tips & folder list -->
