--- a/css/forum/forum.less
+++ b/css/forum/forum.less
@@ -1,26 +1,32 @@
 @import url('reset.less');	
 @import url('layout.less');
-@import url('c-fli.less');
 
-@import url('c-fli-title.less');
-@import url('c-fli-meta.less');
-@import url('c-fli-info.less');
+@import url('viewthread/c-fli.less');
+@import url('viewthread/c-fli-title.less');
+@import url('viewthread/c-fli-meta.less');
+@import url('viewthread/c-fli-info.less');
 
-@import url('c-fli-header.less');	
-@import url('c-fli-footer.less');	
-@import url('c-fli-commend.less');	
-@import url('c-fli-panel.less');	
+@import url('viewthread/c-fli-header.less');	
+@import url('viewthread/c-fli-footer.less');	
+@import url('viewthread/c-fli-commend.less');	
+@import url('viewthread/c-fli-panel.less');	
 
-@import url('c-fli-content.less');
-@import url('c-fli-tips.less');	
-@import url('c-fli-pay.less');	
-@import url('c-fli-custom.less');	
-@import url('c-fli-primary.less');	
-@import url('c-fli-fastreply.less');	
-@import url('c-fli-modact.less');	
-@import url('c-fli-tag.less');	
-@import url('c-fli-attachment.less');	
-@import url('c-fli-rate.less');	
-@import url('c-fli-cmt.less');	
+@import url('viewthread/c-fli-content.less');
+@import url('viewthread/c-fli-tips.less');	
+@import url('viewthread/c-fli-pay.less');	
+@import url('viewthread/c-fli-custom.less');	
+@import url('viewthread/c-fli-primary.less');	
+@import url('viewthread/c-fli-fastreply.less');	
+@import url('viewthread/c-fli-modact.less');	
+@import url('viewthread/c-fli-tag.less');	
+@import url('viewthread/c-fli-attachment.less');	
+@import url('viewthread/c-fli-rate.less');	
+@import url('viewthread/c-fli-cmt.less');	
 
-
+@import url('post/c-post.less');
+@import url('post/c-post-header.less');
+@import url('post/c-post-extra.less');
+@import url('post/c-post-custom.less');
+@import url('post/c-post-body.less');
+@import url('post/c-post-attribute.less');
+@import url('post/c-post-footer.less');
