--- a/css/ui/tab.less
+++ b/css/ui/tab.less
@@ -6,3 +6,13 @@
 .ttp a, .ttp strong{
 	height:auto;
 }
+
+
+.tb{
+	border-bottom: 1px solid #ddd;
+}
+
+.tb a{
+	background-color:#f7f7f7;
+	border: 1px solid #ddd;
+}
