--- a/css/widget/w-route.less
+++ b/css/widget/w-route.less
@@ -6,10 +6,8 @@
     .lh(29px);
     .nobreak;
 }
-.ua-responsive .screen-s{
-	#pt{
-		.none;
-	}
+.ua-responsive .screen-s #pt{
+	.none;
 }
 
 //管理面板
