--- a/template/default/forum/viewthread_header.htm
+++ b/template/default/forum/viewthread_header.htm
@@ -1,6 +1,6 @@
 <header class="i-header i-header-view">
-	<a class="i-header-back" href="forum.php?mod=forumdisplay&fid=$_G['fid']"><i></i><span>返回</span></a>
-	<div class="i-header-title">$_G['forum'][name]</div>
+	<a class="i-header-back" href="forum.php?mod=forumdisplay&fid=$_G['fid']"><i></i><span>$_G['forum'][name]</span></a>
+	<div class="i-header-title"></div>
 	<div class="i-header-menu">
 		<!-- 只看楼主 -->
 		<!--{if $post['invisible'] == 0}-->
