--- a/css/ui/ui.less
+++ b/css/ui/ui.less
@@ -1,5 +1,10 @@
 @import url('button.less');			//按钮
+@import url('text.less');			//文本框
+@import url('textarea.less');		//文本域
+@import url('check.less');			//单选多选
+@import url('select.less');			//选择
 @import url('form.less');			//表单
 @import url('tab.less');			//tab卡
 @import url('mask.less');			//遮罩层
 @import url('tips.less');			//提示文字样式
+@import url('warning.less');		//警告
