道具、固定回复层未登录时情况、未登录时可见评论按钮

--- a/css/forum/viewthread/c-fli-fastreply.less
+++ b/css/forum/viewthread/c-fli-fastreply.less
@@ -71,6 +71,14 @@
 	}
 }
 
+.c-fli-fastreply-logintips{
+	.pa;.lt(0,0);
+	.db;.full;.x;color:#999;
+	span{.none;}
+}
+
+
+
 .ua-responsive .screen-s .c-fli-fastreply{
 	.w(100%);.h(42px);
 	.pf;.lb(0,@c-footer-height);.z(20);
