--- a/css/forum/viewthread/c-fli-panel.less
+++ b/css/forum/viewthread/c-fli-panel.less
@@ -171,6 +171,15 @@
 			i{background-position:-71px -169px;}
 		}
 	}
+
+	//道具
+	.u-magic{
+		i{
+			.size(12px,12px);
+			margin-top:-2px;margin-right:3px;
+		    background-position: -27px -67px;
+		}
+	}
 }
 //PC.取消不可见
 .c-fli-panel{
