--- a/css/widget/w-gotofloor.less
+++ b/css/widget/w-gotofloor.less
@@ -5,6 +5,9 @@
     margin-right: 10px;
 	.z{margin-right:10px;line-height:24px;}
 	label{color:#888;}
+	.px{
+		.w(40px);padding:0 5px;
+	}
 }
 .w-gotofloor-box{
 	.clearfix;
