--- a/template/default/forum/viewthread_node.htm
+++ b/template/default/forum/viewthread_node.htm
@@ -28,6 +28,7 @@ $postshowavatars = !($_G['setting']['bannedmessages'] & 2 && ($post['memberstatu
 		<!--{subtemplate component/c_fli_commend}-->
 		<!--{subtemplate component/c_fli_nextpre}-->
 		<!--{subtemplate component/c_fli_panel}-->
+		<!--{subtemplate component/c_fli_magic}-->
 		</div>
 
 		<!-- dz:来自群组(暂停) -->
