--- a/css/forum/viewthread/c-fli-footer.less
+++ b/css/forum/viewthread/c-fli-footer.less
@@ -2,4 +2,17 @@
 	border-bottom:1px solid #ddd;
 	padding-bottom:10px;
 	margin-bottom:10px;
+	.pr;
+}
+
+.c-fli-magic{
+	.pa;
+	.rt(0,100%);.z(20);
+}
+.ua-responsive .screen-s .c-fli-magic{
+	.pf;.lt(0,0);.z(41);
+	.full(x);.x;
+
+	a{.lh(26px) !important;}
+	img{.y;margin-top:4px;}
 }
