--- a/css/public/base.less
+++ b/css/public/base.less
@@ -178,6 +178,7 @@
     //隐藏简写
     .none(){display:none;}
     .hide(){visibility:hidden;}
+    .show(){visibility:visible;}
 
     //溢出隐藏
     .clip(){overflow:hidden;*zoom:1;} //兼容IE6-7
