--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -1,12 +1,27 @@
 <div class="c-fli-header">
 
+
 	<!-- 头像 -->
-	<a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
+	<!--{if !$post['authorid']}-->
+		<a class="u-avatar" href="javascript:;" style="cursor:default;"><img src="http://img.jx3pve.com/img/common/anonymous.png" alt="未知剑三玩家"/></a>
+	<!--{elseif $post['authorid'] && $post['username'] && $post['anonymous']}-->
+		<!--{if $_G['forum']['ismoderator']}--><a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a><!--{else}--><a class="u-avatar" href="javascript:;" style="cursor:default;"><img src="http://img.jx3pve.com/img/common/anonymous.png" alt="未知剑三玩家"/></a><!--{/if}-->
+	<!--{else}-->
+		<a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
+	<!--{/if}-->
+	
 
 	<span class="u-info">
 		<span class="u-info-1">
 			<!-- 用户名 -->
-				<a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank" class="xi2"{if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
+			<!--{if !$post['authorid']}-->
+				$_G[setting][anonymoustext]
+			<!--{elseif $post['authorid'] && $post['username'] && $post['anonymous']}-->
+				<!--{if $_G['forum']['ismoderator']}--><a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank">$_G[setting][anonymoustext]</a><!--{else}-->$_G[setting][anonymoustext]<!--{/if}-->
+			<!--{else}-->
+				<a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank" {if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
+			<!--{/if}-->
+
 			<!-- 如果是楼主自己 -->
 				<!--{eval $_self = $thread['author'] && $post['author'] == $thread['author'] && $post['position'] !== '1';}-->
 				<!--{if $_self }-->
