--- a/template/default/forum/post_editor_attribute.htm
+++ b/template/default/forum/post_editor_attribute.htm
@@ -39,88 +39,125 @@
 			<div class="m-editor-common m-editor-mod">
 				<h5 class="m-title"><b>扩展设置</b><span></span></h5>
 				<div class="exfm cl" id="extra_additional_c">
-					<table cellspacing="0" cellpadding="0">
-						<tr>
-							<td class="xw1" valign="top">{lang basic_attr}</td>
-							<td>
+					<div class="m-editor-common-block">
+						<h3 class="u-title">{lang basic_attr}</h3>
+						<ul class="u-list">
+							<!-- 使用匿名 -->
+							<li class="u-item-anonymous">
 								<!--{if $_GET[action] != 'edit'}-->
 									<!--{if $_G['group']['allowanonymous']}--><label for="isanonymous"><input type="checkbox" name="isanonymous" id="isanonymous" class="pc" value="1" />{lang post_anonymous}</label><!--{/if}-->
 								<!--{else}-->
 									<!--{if $_G['group']['allowanonymous'] || (!$_G['group']['allowanonymous'] && $orig['anonymous'])}--><label for="isanonymous"><input type="checkbox" name="isanonymous" id="isanonymous" class="pc" value="1" {if $orig['anonymous']}checked="checked"{/if} />{lang post_anonymous}</label><!--{/if}-->
 								<!--{/if}-->
+							</li>
 
+							<!-- 回复仅作者自己可见 -->
+							<li class="u-item-justforauthor">
 								<!--{if $_GET[action] == 'newthread' || $_GET[action] == 'edit' && $isfirstpost}-->
 									<label for="hiddenreplies" class="hiddenreplies" title="所有的回复楼层仅你可见"><input type="checkbox" name="hiddenreplies" id="hiddenreplies" class="pc"{if $thread['hiddenreplies']} checked="checked"{/if} value="1">{lang hiddenreplies}<i></i></label>
 								<!--{/if}-->
+							</li>
+
+							<!-- 倒序排列 -->
+							<li class="u-item-viewmode">
 								<!--{if $_G['uid'] && ($_GET[action] == 'newthread' || $_GET[action] == 'edit' && $isfirstpost) && $special != 3}-->
 									<label for="ordertype" title="让最后回复的在最前楼层"><input type="checkbox" name="ordertype" id="ordertype" class="pc" value="1" $ordertypecheck />{lang post_descviewdefault}</label>
 								<!--{/if}-->
+							</li>
+
+							<!-- 接受回复通知 -->
+							<li class="u-item-msg">
 								<!--{if ($_GET[action] == 'newthread' || $_GET[action] == 'edit' && $isfirstpost)}-->
 									<label for="allownoticeauthor"><input type="checkbox" name="allownoticeauthor" id="allownoticeauthor" class="pc" value="1"{if $allownoticeauthor} checked="checked"{/if} />{lang post_noticeauthor}</label>
 								<!--{/if}-->
 								<!--{if $_GET[action] != 'edit' && helper_access::check_module('feed') && $_G['forum']['allowfeed']}-->
 									<label for="addfeed"><input type="checkbox" name="addfeed" id="addfeed" class="pc" value="1" $addfeedcheck>{lang addfeed}</label>
 								<!--{/if}-->
+							</li>
+
+							<!-- 使用签名 -->
+							<li class="u-item-sign">
 								<label for="usesig"><input type="checkbox" name="usesig" id="usesig" class="pc" value="1" {if !$_G['group']['maxsigsize']}disabled {else}$usesigcheck {/if}/>{lang post_show_sig}</label>
-							</td>
-						</tr>
-						<tr>
-							<td class="xw1" valign="top">{lang text_feature}</td>
-							<td>
+							</li>
+						</ul>
+					</div>
+					<div class="m-editor-common-block">
+						<h3 class="u-title">{lang text_feature}</h3>
+						<ul class="u-list">
+							<!-- html模式 -->
+							<li class="u-item-html">
 								<!--{if ($_G['forum']['allowhtml'] || ($_GET[action] == 'edit' && ($orig['htmlon'] & 1))) && $_G['group']['allowhtml']}-->
 									<label for="htmlon"><input type="checkbox" name="htmlon" id="htmlon" class="pc" value="1" $htmloncheck />{lang post_html}</label>
 								<!--{else}-->
 									<label for="htmlon"><input type="checkbox" name="htmlon" id="htmlon" class="pc" value="0" $htmloncheck disabled="disabled" />{lang post_html}</label>
 								<!--{/if}-->
+							</li>
+							<!-- img代码 -->
+							<li class="u-item-img">
 								<label for="allowimgcode"><input type="checkbox" id="allowimgcode" class="pc" disabled="disabled"{if $_G['forum']['allowimgcode']} checked="checked"{/if} />{lang post_imgcode}</label>
+							</li>
+							<!-- img解析 -->
+							<li class="u-item-imgparse">
 								<!--{if $_G['forum']['allowimgcode']}-->
 									<label for="allowimgurl"><input type="checkbox" id="allowimgurl" class="pc" checked="checked" />{lang post_imgurl}</label>
 								<!--{/if}-->
+							</li>
+							<!-- 禁用链接识别 -->
+							<li class="u-item-linkparse">
 								<label for="parseurloff"><input type="checkbox" name="parseurloff" id="parseurloff" class="pc" value="1" $urloffcheck />{lang disable}{lang post_parseurl}</label>
+							</li>
+							<!-- 禁用表情 -->
+							<li class="u-item-dissmile">
 								<label for="smileyoff"><input type="checkbox" name="smileyoff" id="smileyoff" class="pc" value="1" $smileyoffcheck />{lang disable}{lang smilies}</label>
+							</li>
+							<!-- 禁用编辑器代码 -->
+							<li class="u-item-disubbcode">
 								<label for="bbcodeoff"><input type="checkbox" name="bbcodeoff" id="bbcodeoff" class="pc" value="1" $codeoffcheck />{lang disable}{lang discuzcode}</label>
+							</li>
+							<!-- 内容生成图片 -->
+							<li class="u-item-tobeimg">
 								<!--{if $_G['group']['allowimgcontent']}-->
 									<label for="imgcontent"><input type="checkbox" name="imgcontent" id="imgcontent" class="pc" value="1" $imgcontentcheck onclick="switchEditor(this.checked?0:1);$('e_switchercheck').checked=this.checked;" />{lang content_to_pic}</label>
 								<!--{else}-->
 									<label for="imgcontent"><input type="checkbox" name="imgcontent" id="imgcontent" class="pc" value="0" $imgcontentcheck disabled="disabled"/>{lang content_to_pic}</label>
 								<!--{/if}-->
-							</td>
-						</tr>
-						<!--{if $_GET[action] == 'newthread' && $_G['forum']['ismoderator'] && ($_G['group']['allowdirectpost'] || !$_G['forum']['modnewposts'])}-->
-							<!--{if $_GET[action] == 'newthread' && $_G['forum']['ismoderator'] && ($_G['group']['allowdirectpost'] || !$_G['forum']['modnewposts']) && ($_G['group']['allowstickthread'] || $_G['group']['allowdigestthread'])}-->
-								<tr>
-									<td class="xw1" valign="top">{lang manage_operation}</td>
-									<td>
-										<!--{if $_G['group']['allowstickthread']}-->
-											<label for="sticktopic"><input type="checkbox" name="sticktopic" id="sticktopic" class="pc" value="1" $stickcheck />{lang post_stick_thread}</label>
-										<!--{/if}-->
-										<!--{if $_G['group']['allowdigestthread']}-->
-											<label for="addtodigest"><input type="checkbox" name="addtodigest" id="addtodigest" class="pc" value="1" $digestcheck />{lang post_digest_thread}</label>
-										<!--{/if}-->
-									</td>
-								</tr>
+							</li>
+						</ul>
+					</div>
+					<div class="m-editor-common-block">
+						<h3 class="u-title">{lang manage_operation}</h3>
+						<ul class="u-list">
+							<!--{if $_GET[action] == 'newthread' && $_G['forum']['ismoderator'] && ($_G['group']['allowdirectpost'] || !$_G['forum']['modnewposts'])}-->
+								<!--{if $_GET[action] == 'newthread' && $_G['forum']['ismoderator'] && ($_G['group']['allowdirectpost'] || !$_G['forum']['modnewposts']) && ($_G['group']['allowstickthread'] || $_G['group']['allowdigestthread'])}-->
+									<!--{if $_G['group']['allowstickthread']}-->
+										<li class="u-item-stick"><label for="sticktopic"><input type="checkbox" name="sticktopic" id="sticktopic" class="pc" value="1" $stickcheck />{lang post_stick_thread}</label></li>
+									<!--{/if}-->
+									<!--{if $_G['group']['allowdigestthread']}-->
+										<li class="u-item-digest"><label for="addtodigest"><input type="checkbox" name="addtodigest" id="addtodigest" class="pc" value="1" $digestcheck />{lang post_digest_thread}</label></li>
+									<!--{/if}-->
+								<!--{/if}-->
+							<!--{elseif $_GET[action] == 'edit' && $_G['forum_auditstatuson']}-->
+								<label for="audit"><input type="checkbox" name="audit" id="audit" class="pc" value="1">{lang auditstatuson}</label>
 							<!--{/if}-->
-						<!--{elseif $_GET[action] == 'edit' && $_G['forum_auditstatuson']}-->
-							<tr>
-								<td class="xw1" valign="top">{lang manage_operation}</td>
-								<td>
-									<label for="audit"><input type="checkbox" name="audit" id="audit" class="pc" value="1">{lang auditstatuson}</label>
-								</td>
-							</tr>
-						<!--{/if}-->
-						<!--{if $_GET[action] == 'edit' && $isorigauthor && ($isfirstpost && $thread['replies'] < 1 || !$isfirstpost) && !$rushreply && $_G['setting']['editperdel']}-->
-							<tr>
-								<td class="xw1" valign="top">{lang post_delpost}</td>
-								<td>
-									<button type="button" class="u-btn-delete pn xi1" onclick="deleteThread();"><span>{lang post_delpost}</span></button>
-									<input type="hidden" name="delete" id="delete" value="0" />
-									<span class="u-msg-delete-warning">
-									{lang del_thread_warning}<!--{if $thread[special] == 3}-->, {lang reward_price_back}<!--{/if}--></span>
-								</td>
-							</tr>
-						<!--{/if}-->
-						<tr><td colspan='2'><span class="u-msg-deltips"><!--{block/1261}--></span></td></tr>
-					</table>
+						</ul>
+					</div>
+					<div class="m-editor-common-block">	
+						<h3 class="u-title">{lang post_delpost}</h3>
+						<ul class="u-list">
+							<!--{if $_GET[action] == 'edit' && $isorigauthor && ($isfirstpost && $thread['replies'] < 1 || !$isfirstpost) && !$rushreply && $_G['setting']['editperdel']}-->
+							<li class="u-item-del">
+								<button type="button" class="u-btn-delete pn xi1" onclick="deleteThread();"><span>{lang post_delpost}</span></button>
+								<input type="hidden" name="delete" id="delete" value="0" />
+								<span class="u-msg-delete-warning">
+								{lang del_thread_warning}<!--{if $thread[special] == 3}-->, {lang reward_price_back}<!--{/if}--></span>
+							</li>
+							<!--{/if}-->
+							<li class="u-item-deltip">
+								<span class="u-msg-deltips"><!--{block/1261}--></span>
+							</li>
+						</ul>
+					</div>
+					
 				</div>
 			</div>
 
@@ -132,7 +169,7 @@
 				<div class="m-editor-price m-editor-mod">
 					<h5 class="m-title"><b>主题出售</b><span><!--{block/1262}--></span></h5>
 					<div id="extra_price_c" class="exfm cl">
-						<b>{lang price}</b>
+						<span>{lang price}</span>
 						<input type="text" id="price" name="price" class="u-text" value="$thread[pricedisplay]" onblur="extraCheck(2)" /> {$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][unit]}{$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][title]}
 						<span class="xg1">（{lang post_price_comment}）</span>
 						<span class="u-msg-saletips">
@@ -152,21 +189,15 @@
 				<div class="m-editor-allow m-editor-mod">
 					<h5 class="m-title"><b>阅读权限</b><span>{lang post_select_usergroup_readacces}</span></h5>
 					<div id="extra_readperm_c" class="exfm cl">
-						<table cellspacing="0" cellpadding="0">
-							<tr>
-								<td class="xw1">{lang readperm}</td>
-								<td>
-									<select name="readperm" id="readperm" class="u-select" style="width:90px" onchange="extraCheck(1)">
-										<option value="">{lang unlimited}</option>
-										<!--{loop $_G['cache']['groupreadaccess'] $val}-->
-											<option value="$val[readaccess]" title="{lang readperm}: $val[readaccess]"{if $thread['readperm'] == $val[readaccess]} selected="selected"{/if}>$val[grouptitle]</option>
-										<!--{/loop}-->
-										<option value="255"{if $thread['readperm'] == 255} selected="selected"{/if}>{lang highest_right}</option>
-									</select>
-									<span class="xg1"></span>
-								</td>
-							</tr>
-						</table>
+						<span>{lang readperm}</span>
+						<select name="readperm" id="readperm" class="u-select" style="width:90px" onchange="extraCheck(1)">
+							<option value="">{lang unlimited}</option>
+							<!--{loop $_G['cache']['groupreadaccess'] $val}-->
+								<option value="$val[readaccess]" title="{lang readperm}: $val[readaccess]"{if $thread['readperm'] == $val[readaccess]} selected="selected"{/if}>$val[grouptitle]</option>
+							<!--{/loop}-->
+							<option value="255"{if $thread['readperm'] == 255} selected="selected"{/if}>{lang highest_right}</option>
+						</select>
+						<span class="xg1"></span>
 					</div>
 				</div>
 				<!--{/if}-->
@@ -212,31 +243,20 @@
 				<div class="m-editor-tag m-editor-mod">
 					<h5 class="m-title"><b>标签Tag</b><span>指定tag创建关键词索引</span></h5>
 					<div id="extra_tag_c" class="exfm cl">
-						<table cellspacing="0" cellpadding="0">
-							<tr>
-								<td class="xw1">{lang post_tag}</td>
-								<td>
-									<input type="text" class="u-text" size="60" id="tags" name="tags" value="$postinfo[tag]" onblur="extraCheck(4)" />
-									<a href="javascript:;" id="clickbutton[]" class="xi2" onclick="relatekw('-1','-1');doane();">{lang auto_keyword}</a><span class="pipe">|</span><a href="javascript:;" id="choosetag" class="xi2" onclick="showWindow(this.id, 'forum.php?mod=tag', 'get', 0)">{lang choosetag}</a>
-								</td>
-							</tr>
-							<tr>
-								<td></td>
-								<td>
-									<p class="xg1">{lang posttag_comment}</p>
-									<!--{eval $recent_use_tag = recent_use_tag();}-->
-									<!--{if $recent_use_tag}-->
-										<p class="mtn">{lang recent_use_tag}&nbsp;
-											<!--{eval $tagi = 0;}-->
-											<!--{loop $recent_use_tag $var}-->
-												<!--{if $tagi}-->, <!--{/if}--><a href="javascript:;" class="xi2" onclick="$('tags').value == '' ? $('tags').value += '$var' : $('tags').value += ',$var';extraCheck(4);doane();">$var</a>
-												<!--{eval $tagi++;}-->
-											<!--{/loop}-->
-										</p>
-									<!--{/if}-->
-								</td>
-							</tr>
-						</table>
+						<span>{lang post_tag}</span>
+						<input type="text" class="u-text" size="60" id="tags" name="tags" value="$postinfo[tag]" onblur="extraCheck(4)" />
+						<a href="javascript:;" id="clickbutton[]" class="xi2" onclick="relatekw('-1','-1');doane();">{lang auto_keyword}</a><span class="pipe">|</span><a href="javascript:;" id="choosetag" class="xi2" onclick="showWindow(this.id, 'forum.php?mod=tag', 'get', 0)">{lang choosetag}</a>
+						<p class="xg1">{lang posttag_comment}</p>
+						<!--{eval $recent_use_tag = recent_use_tag();}-->
+						<!--{if $recent_use_tag}-->
+							<p class="mtn">{lang recent_use_tag}&nbsp;
+								<!--{eval $tagi = 0;}-->
+								<!--{loop $recent_use_tag $var}-->
+									<!--{if $tagi}-->, <!--{/if}--><a href="javascript:;" class="xi2" onclick="$('tags').value == '' ? $('tags').value += '$var' : $('tags').value += ',$var';extraCheck(4);doane();">$var</a>
+									<!--{eval $tagi++;}-->
+								<!--{/loop}-->
+							</p>
+						<!--{/if}-->
 					</div>
 				</div>
 				<!--{/if}-->
