--- a/template/default/forum/post_x_footer.htm
+++ b/template/default/forum/post_x_footer.htm
@@ -7,9 +7,12 @@
 		</div>
 	<!--{/if}-->
 
-	<div class="mtm mbm pnpost">
-		<a href="home.php?mod=spacecp&ac=credit&op=rule&fid=$_G['fid']" class="y" target="_blank">{lang post_credits_rule}</a>
-		<button type="submit" id="postsubmit" class="pn pnc" value="true" name="{if $_GET[action] == 'newthread'}topicsubmit{elseif $_GET[action] == 'reply'}replysubmit{elseif $_GET[action] == 'edit'}editsubmit{/if}">
+	<div class="mtm mbm pnpost c-post-postbar">
+		<!-- 本版积分规则 -->
+		<a href="home.php?mod=spacecp&ac=credit&op=rule&fid=$_G['fid']" class="c-post-rule y" target="_blank">{lang post_credits_rule}</a>
+		
+		<!-- 发布按钮 -->
+		<button type="submit" id="postsubmit" class="u-button u-button-publish" value="true" name="{if $_GET[action] == 'newthread'}topicsubmit{elseif $_GET[action] == 'reply'}replysubmit{elseif $_GET[action] == 'edit'}editsubmit{/if}">
 		<!--{if $_GET[action] == 'newthread'}-->
 			<!--{if $special == 0}--><span>{lang post_newthread}</span>
 			<!--{elseif $special == 1}--><span>{lang post_newthreadpoll}</span>
@@ -27,15 +30,19 @@
 		<!--{elseif $_GET[action] == 'edit'}--><span>{lang edit_save}</span>
 		<!--{/if}-->
 		</button>
+
+		<!-- 草稿 -->
 		<!--{if $_G['uid']}-->
 			<input type="hidden" id="postsave" name="save" value="" />
 			<!--{if $_GET[action] == 'newthread' && !$modnewthreads || $_GET[action] == 'edit' && $isfirstpost && !$modnewreplies && $thread['displayorder'] == -4}-->
-				<button type="button" id="postsubmit" class="pn" value="true" onclick="$('postsave').value = 1;$('postsubmit').click();"><em>{lang save_draft}</em></button>
+				<button type="button" id="postsubmit" class="u-button u-button-draft" value="true" onclick="$('postsave').value = 1;$('postsubmit').click();"><em>{lang save_draft}</em></button>
 			<!--{/if}-->
 		<!--{/if}-->
 		<!--{hook/post_btn_extra}-->
+
+		<!-- 转播给收听 -->
 		<!--{if helper_access::check_module('follow') && $_GET[action] != 'edit'}-->
-		<span id="adddynamicspan"><label><input type="checkbox" name="adddynamic" id="adddynamic" value="true" class="pc" {if $_G['forum']['allowfeed'] && !$_G[tid] && empty($_G['forum']['viewperm'])}checked="checked"{/if} />{lang post_relay}</label></span>
+		<span class="u-actopfollow" id="adddynamicspan"><label><input type="checkbox" name="adddynamic" id="adddynamic" value="true" class="pc" {if $_G['forum']['allowfeed'] && !$_G[tid] && empty($_G['forum']['viewperm'])}checked="checked"{/if} />{lang post_relay}</label></span>
 		<!--{/if}-->
 		<!--{if !empty($_G['setting']['pluginhooks']['post_sync_method'])}-->
 			<span>
@@ -46,8 +53,10 @@
 		<!--{if $special == 2}-->
 			<label><input type="checkbox" name="continueadd" value="yes" class="pc" />{lang post_message2}</label>
 		<!--{/if}-->
+
+		<!-- 来自群组 -->
 		<!--{if helper_access::check_module('group') && $mygroups && $_G['forum']['status'] != 3}-->
-		<span id="adddynamicspan"><label>&nbsp;&nbsp;{lang fromgroup}:<select name="mygroupid"><option value="">{lang selectmygroup}</option><!--{loop $mygroups $mygroupid $mygroupname}--><option value="{$mygroupid}__{$mygroupname}" {if $selectgroupid == $mygroupid} selected{/if}>$mygroupname</option><!--{/loop}--></select></label></span>
+		<span class="u-fromgroup" id="adddynamicspan"><label>&nbsp;&nbsp;{lang fromgroup}:<select name="mygroupid"><option value="">{lang selectmygroup}</option><!--{loop $mygroups $mygroupid $mygroupname}--><option value="{$mygroupid}__{$mygroupname}" {if $selectgroupid == $mygroupid} selected{/if}>$mygroupname</option><!--{/loop}--></select></label></span>
 		<!--{/if}-->
 	</div>
 </div>
