--- a/template/default/common/js.htm
+++ b/template/default/common/js.htm
@@ -13,4 +13,4 @@
 <script src="http://js.jx3pve.com/js/init.min.js"></script>
 <script src="http://js.jx3pve.com/js/plugin/responsive.min.js"></script>
 <!-- sdk -->
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+<script src="http://js.jx3pve.com/js/lib/wb.min.js" type="text/javascript" charset="utf-8"></script>
