--- a/css/forum/viewthread/c-fli-content.less
+++ b/css/forum/viewthread/c-fli-content.less
@@ -14,3 +14,20 @@
 .ua-responsive .screen-s .c-fli-content{
 	margin-left: 30px;
 }
+
+//提示样式
+.c-fli-tips{
+	padding:2px 10px;
+	.tips(yel);
+	border: 1px dashed #efaa00;
+}
+.c-fli-tips-justforauthor{
+}
+.c-fli-tips-password{
+	padding:5px 10px;
+	.u-text{padding:0 10px;/*margin-right:10px;*/}
+	.u-button{padding:0 10px;margin-top:-3px;}
+}
+.ua-responsive .screen-s .c-fli-tips-password{
+	span{.db;}
+}
