--- a/css/forum/viewthread/c-fli-pay.less
+++ b/css/forum/viewthread/c-fli-pay.less
@@ -1,37 +1,84 @@
-//付费
-.c-fli-pay{
-	//帖子需要收费时
-	.c-paysub{
-		@h:30px;
-		padding: 5px 8px 5px 24px !important;
+//付费样式
+.c-fli-pay-content{
+	.pr;
 
-		//购买按钮
-		.u-btn-buysub{
-			.db;.fr;
-			.lh(@h);
-			.bold;color:#c00;
-			padding:0 10px;
-			background:#fff;border:1px solid darken(#f5d80e,3%);border-radius:3px;
-			&:hover{
-				border-color:darken(#f5d80e,5%);
-				color:lighten(#c00,1%);
-			}
-			i{
-				background:url('@{url}icon/viewpay.gif') no-repeat center center;
-				.size(16px,@h);.y(top);margin-right:5px;.dbi;
-			}
-		}
-		//本主题需向作者支付 2 米币 才能浏览。
-		.u-msg-paysub{
-			line-height:@h + 2px;
-		}
-		//成为VIP会员全站资源免费下载，无需回复即可查看隐藏内容。
-		.u-msg-tobevip{
+	border: 1px dashed #ddd;
+    padding: 10px;
+    background-color: #f7f7f7;
 
+	//购买按钮
+	.u-btn-buysub{
+		.db;.fl;
+		padding:0 6px;
+		background:#FFF6E8;
+		border:1px solid #EAAF0A;
+		border-radius:3px;
+		color:@yel;
+		i{
+			background:url('@{url}icon/viewpay.gif') no-repeat center center;
+			.size(16px);.y(top);margin-right:5px;.dbi;
+			margin-top:5px;
+			margin-right:5px;
 		}
-		//已有购买数（隐藏）
-		.u-haspay{
-			.none;
+		margin-right:10px;
+		.clip;
+		&:hover{
+			background-color:#fff;
+			i{animation: goUp .4s ease-in-out;}
 		}
+	}
+	//本主题需向作者支付 2 米币 才能浏览。
+	.u-msg-paysub{
+		strong{
+			.color(@yel);.bold;
+		}
+	}
+	//成为VIP会员全站资源免费下载，无需回复即可查看隐藏内容。
+	.u-msg-tobevip {
+		.pa;.rt(10px,10px);
+		a{&:extend(.u-btn-blue);padding:0 10px;}
+	}
+	//已有购买数（隐藏）
+	.u-msg-haspay{
+		.none;
+	}
+	//免费时间
+	.u-msg-freetime{
+
+	}
+}
+
+//付费之前免费可见的内容
+.c-fli-pay-free{
+	margin-bottom:10px;
+}
+
+//已经购买的人和免费剩余时间
+.c-fli-pay-tips{
+
+}
+
+//已经付费或可见时
+.c-fli-pay-record{
+	padding:2px 10px;
+	.tips(yel);
+	strong{
+		.bold;color:@yel;
+	}
+	.u-info{
+
+	}
+	.u-record{
+		.fr;.color(#999);
+	}
+}
+
+//付费记录弹层
+
+
+.ua-responsive .screen-s{
+	.c-fli-pay-content .u-btn-buysub{float:none;}
+	.c-fli-pay-content .u-msg-tobevip{.ps;}
+	.c-fli-pay-content{
 	}
 }
