--- a/template/default/bak/editorbar.hbs
+++ b/template/default/bak/editorbar.hbs
@@ -10,3 +10,8 @@
 	<a id="{$editorid}_aud" title="{lang e_audio_title}">{lang e_audio}</a>
 	<a id="{$editorid}_fls" title="{lang e_flash_title}">{lang e_flash}</a>
 <!--{/if}-->
+
+<!--{if $isfirstpost}-->
+	<a id="{$editorid}_page" adv="1" title="{lang page_separate}">Page</a>
+	<a id="{$editorid}_index" adv="1" title="{lang directory}">Index</a>
+<!--{/if}-->
