--- a/template/default/forum/viewthread_node_body.htm
+++ b/template/default/forum/viewthread_node_body.htm
@@ -1,19 +1,25 @@
 <div class="c-fli-content">
 <!--{if !$_G['forum']['ismoderator'] && $_G['setting']['bannedmessages'] & 1 && (($post['authorid'] && !$post['username']) || ($_G['thread']['digest'] == 0 && ($post['groupid'] == 4 || $post['groupid'] == 5 || $post['memberstatus'] == '-1')))}-->
 	<!-- 禁止查看 -->
-	<div class="locked c-fli-tips c-fli-tips-banned">{lang message_banned}</div>
+	<div class="c-fli-tips c-fli-tips-banned">{lang message_banned}</div>
 <!--{elseif !$_G['forum']['ismoderator'] && $post['status'] & 1}-->
 	<!-- 草稿？ -->
-	<div class="locked c-fli-tips c-fli-tips-ismoderator">{lang message_single_banned}</div>
+	<div class="c-fli-tips c-fli-tips-ismoderator">{lang message_single_banned}</div>
 <!--{elseif $needhiddenreply}-->
 	<!-- 隐藏 -->
-	<div class="locked c-fli-tips c-fli-tips-hidden">{lang message_ishidden_hiddenreplies}</div>
+	<div class="c-fli-tips c-fli-tips-hidden">{lang message_ishidden_hiddenreplies}</div>
 <!--{elseif $post['first'] && $_G['forum_threadpay']}-->
-	<!-- 付费 -->
+	<!-- 需要付费 -->
 	<!--{template forum/viewthread_pay}-->
 <!--{elseif $_G['forum_discuzcode']['passwordlock'][$post[pid]]}-->
 	<!-- 需要密码 -->
-	<div class="locked c-fli-tips c-fli-tips-password">{lang message_password_exists} {lang pleaseinputpw}<input type="text" id="postpw_$post[pid]" class="vm" />&nbsp;<button class="pn vm" type="button" onclick="submitpostpw($post[pid]{if $_GET['from'] == 'preview'},{$post[tid]}{else}{/if})"><strong>{lang submit}</strong></button></div>
+	<div class="c-fli-tips c-fli-tips-password">
+		<span>{lang message_password_exists} {lang pleaseinputpw} </span>
+		<input class="u-text" type="text" id="postpw_$post[pid]" />&nbsp;
+		<button class="u-button" type="button" onclick="submitpostpw($post[pid]{if $_GET['from'] == 'preview'},{$post[tid]}{else}{/if})">
+			{lang submit}
+		</button>
+	</div>
 <!--{else}-->
 
 	<!-- 副楼标题 -->
@@ -24,28 +30,32 @@
 
 	<!-- 仅管理员可见 -->
 	<!--{if $_G['setting']['bannedmessages'] & 1 && (($post['authorid'] && !$post['username']) || ($_G['thread']['digest'] == 0 && ($post['groupid'] == 4 || $post['groupid'] == 5 || $post['memberstatus'] == '-1')))}-->
-		<div class="locked c-fli-tips">{lang admin_message_banned}</div>
+		<div class="c-fli-tips">{lang admin_message_banned}</div>
 	<!--{elseif $post['status'] & 1}-->
-		<div class="locked c-fli-tips">{lang admin_message_single_banned}</div>
+		<div class="c-fli-tips">{lang admin_message_single_banned}</div>
 	<!--{/if}-->
+
+	<!-- 仅作者可见 -->
 	<!--{if !$post['first'] && $hiddenreplies && $_G['forum']['ismoderator']}-->
-		<div class="locked c-fli-tips">{lang message_ishidden_hiddenreplies}</div>
+		<div class="c-fli-tips c-fli-tips-justforauthor">{lang message_ishidden_hiddenreplies}</div>
 	<!--{/if}-->
 
-	<!-- 密码 -->
+	<!-- 已输入密码后 -->
 	<!--{if $_G['forum_discuzcode']['passwordauthor'][$post[pid]]}-->
-		<div class="locked c-fli-tips c-fli-tips-password">{lang message_password_exists}</div>
+		<div class="c-fli-tips c-fli-tips-password">{lang message_password_exists}</div>
 	<!--{/if}-->
 
+	<!-- 已付费后 -->
+	<!--{if $post['first'] && $_G['forum_thread']['price'] > 0 && $_G['forum_thread']['special'] == 0 && empty($previewspecial)}-->
+		<div class="c-fli-pay">
+			<div class="c-fli-pay-record">
+				<span class="u-info">{lang pay_threads}: <strong>$_G[forum_thread][price] {$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][unit]}{$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][title]} </strong></span>
+				<a class="u-record" href="forum.php?mod=misc&action=viewpayments&tid=$_G[tid]" onclick="showWindow('pay', this.href)">{lang pay_view}</a>
+			</div>
+		</div>
+	<!--{/if}-->
 
 	<!--{if $post['first']}--> 
-
-		<!-- 付费主题 -->
-		<!--{if $_G['forum_thread']['price'] > 0 && $_G['forum_thread']['special'] == 0 && empty($previewspecial)}-->
-			<div class="c-fli-pay">
-				<div class="locked"><em class="y"><a href="forum.php?mod=misc&action=viewpayments&tid=$_G[tid]" onclick="showWindow('pay', this.href)">{lang pay_view}</a></em>{lang pay_threads}: <strong>$_G[forum_thread][price] {$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][unit]}{$_G['setting']['extcredits'][$_G['setting']['creditstransextra'][1]][title]} </strong></div>
-			</div>
-		<!--{/if}-->
 
 		<!-- 分类信息 -->
 		<!--{if $threadsort && $threadsortshow}-->
